--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
-    "@sap/cds-dk": "^7"
+    "@sap/cds-dk": "^7",
+    "sqlite3": "5.1.6"
   },
   "scripts": {
-    "start": "cds-serve"
+    "start": "cds run"
   },
   "cds": {
-    "profile": "with-mtx-sidecar",
+    "hana": {
+      "deploy-format": "hdbtable"
+    },
     "requires": {
-      "multitenancy": true,
-      "db": "hana"
+      "db": {
+        "kind": "sql"
+      }
     }
   }
 }
